--- a/BusinessEntity/BusinessEntity.csproj
+++ b/BusinessEntity/BusinessEntity.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="group.cs" />
+    <Compile Include="Login.cs" />
     <Compile Include="personDetail.cs" />
     <Compile Include="personPhone.cs" />
     <Compile Include="person.cs" />
